==================
JellyRoll Change Log
==================

Version 0.10.3.5, 11 Jun, 2018
------------------------------
* Update fixer.io API

Version 0.10.3.4, 31 May, 2018
------------------------------
* Improved MPN in product feed
* Added availability to product feed
* Added additional images to product feed

Version 0.10.3.3, 31 May, 2018
------------------------------
* Add MPN to product feed

Version 0.10.3.2, 16 April, 2018
-------------------------------
* PayPal checkout deadlock fixes

Version 0.10.3.1, 16 April, 2018
-------------------------------
* Currency conversion only applied once to 'other' currency prices

Version 0.10.3.0, 5 April, 2018
-------------------------------
* Add other currency prices to full product page

Version 0.10.2.3, 21 Feb, 2018
-------------------------------
* Fix OrderPayment admin currency

Version 0.10.2.2, 7 Feb, 2018
-------------------------------
* Default payment method

Version 0.10.2.1, 6 Feb, 2018
-------------------------------
* Add appropriate indexes to l10n models

Version 0.10.2.0, 5 Feb, 2018
-------------------------------
* Add all prices to product page context

Version 0.10.1.1, 5 Feb, 2018
-------------------------------
* Add missing code for cheapest shipping to base cart

Version 0.10.1.0, 3 Feb, 2018
-------------------------------
* Add cheapest shipping to base cart

Version 0.10.0.0, 3 Feb, 2018
-------------------------------
* Add mult-currency support

Version 0.9.7.8, 11 May, 2017
-------------------------------
* Ingenico handle unicode characters in process views


Version 0.9.7.7, 9 May, 2017
-------------------------------
* Ingenico handle unicode characters in shasign


Version 0.9.7.6, 28 April, 2017
-------------------------------
* Ingenico handle payment deleted like a refund


Version 0.9.7.5, 27 April, 2017
-------------------------------
* Ingenico improve handling visiting accepted page after processing order


Version 0.9.7.4, 27 April, 2017