@@ -7,3 +7,4 @@ requests>=2.13.0,<3.0.0
 httmock>=1.2.3,<2.0.0
 djangorestframework>=3.3.0,<3.4.0
 django-ipware>=1.1.6,<2.0.0
+currencyconverter>=0.13.3,<1.0.0
