@@ -1,14 +1,20 @@
+from django.conf import settings
 from django.core.mail import mail_admins
 from django.core.management.base import BaseCommand
 
-from satchmo.currency.modules.fixer import FixerEchangeRateClient
+from satchmo.currency.modules.fixer import FixerExchangeRateClient
+from satchmo.currency.modules.ecb import EcbExchangeRateClient
 
 
 class Command(BaseCommand):
     help = 'Updates exchange rates'
 
     def handle(self, *args, **options):
-        client = FixerEchangeRateClient()
+        if settings.EXCHANGE_RATE_MODULE == 'fixer':
+            client = FixerExchangeRateClient()
+        else:
+            client = EcbExchangeRateClient()
+
         exchange_rates = client.update_exchange_rates()
         for exchange_rate in exchange_rates:
             self.stdout.write('Successfully updated "%s"' % exchange_rate)
